fix: correção de tipo de retorno